# submine

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  __init__.py  api.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  wheels.yml
algorithms/: __init__.py  grami.py  gspan.py  sopagrami.py
core/: graph.py
example/: sopagrami.ipynb
io/: common.py  grami.py  sopagrami.py
submine/: __init__.py  api.py  errors.py  registry.py
submine/algorithms/: base.py  gspan.py  sopagrami.py
submine/backends/sopagrami/cpp/: CMakeLists.txt
submine/backends/sopagrami/cpp/include/: alg.hpp
submine/backends/sopagrami/cpp/src/: alg.cpp  dump.cpp
submine/core/: graph.py  result.py
submine/io/: __init__.py  common.py  gspan.py  sopagrami.py  transcode.py
submine/utils/: checks.py
utils/: checks.py
