[build-system]
requires = ["scikit-build-core>=0.5", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "submine"
version = "0.1.0"
description = "Modular subgraph mining library with unified API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "networkx>=2.8",
]
authors = [
  { name = "Ridwan Amure" }
]
license = { text = "MIT" }
keywords = ["graph-mining", "subgraph-mining", "gspan", "frequent-subgraph-mining"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "build>=1",
  "twine>=5",
  "ruff>=0.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["submine*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
